[package]
name = "linear-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
graphql_client = { version = "0.14.0", features = ["reqwest-blocking"] }
inquire = { version = "0.7", features = ["editor"] }
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
